# intelligent-k8s-anomaly-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pytest.ini  IMPROVEMENTS.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-ml-pipeline.yml  deploy-infrastructure.yml  model-training.yml  security-scan.yml
argocd/applications/: infra.yaml  root-app.yaml
argocd/applicationsets/: apps.yaml  ml-platform.yaml
argocd/config/: argocd-cm.yaml  kustomization.yaml  rbac.yaml
argocd/projects/: aiops-project.yaml
config/: config.yaml
config/environments/: development.yaml  production.yaml  staging.yaml
config/kubernetes/: namespace.yaml  network-policy.yaml  rbac.yaml
docker/: Dockerfile.api  Dockerfile.ml-pipeline  docker-bake.hcl  docker-compose.yml
docs/: README.md  security.md
docs/api/: endpoints.md
docs/architecture/: data-flow.md  overview.md
docs/deployment/: production.md  quickstart.md  troubleshooting.md
docs/development/: contributing.md  setup.md
infrastructure/helm/anomaly-detector/: Chart.yaml  values.yaml
infrastructure/helm/anomaly-detector/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
infrastructure/helm/monitoring-stack/: Chart.yaml  _helpers.tpl  values.yaml
infrastructure/helm/monitoring-stack/templates/alertmanager/: alertmanager-config.yaml
infrastructure/terraform/: backend.conf  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
ml-pipeline/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ml-pipeline/config/: deployment_config.yaml  model_config.yaml  training_config.yaml
ml-pipeline/src/ml_pipeline/: init.py
ml-pipeline/src/ml_pipeline/data/: data_collector.py  feature_engineering.py  init.py
ml-pipeline/src/ml_pipeline/models/: anomaly_detector.py  init.py  time_series_predictor.py
ml-pipeline/src/ml_pipeline/training/: init.py  train.py
modules/kubernetes/: main.tf  outputs.tf  variables.tf
modules/ml-platform/: main.tf  outputs.tf  variables.tf
modules/ml-platform/artifacts/: main.tf  outputs.tf  variables.tf
modules/ml-platform/db/: main.tf  outputs.tf  variables.tf
modules/ml-platform/k8s-jupyter/: main.tf  outputs.tf  variables.tf
modules/ml-platform/k8s-mlflow/: main.tf  outputs.tf  variables.tf
modules/networking/: main.tf  outputs.tf  variables.tf
monitoring/alertmanager/: alertmanager-config.yaml
monitoring/grafana/: folders.yaml  notifiers.yaml
monitoring/prometheus/: additional-scrape-configs.yaml  alerting-rules.yaml  recording-rules.yaml
monitoring/scripts/: apply-static.sh
scripts/demo/: chaos-cpu-spike.sh  chaos-memory-leak.sh
scripts/deployment/: deploy-application.sh  deploy-infrastructure.sh  deploy-models.sh
scripts/ml-ops/: deploy-model.sh  evaluate-model.sh  monitor-model.sh  train-model.sh
scripts/setup/: install-dependencies.sh
scripts/utilities/: backup-models.sh  cleanup.sh  generate-config.sh
src/: requirements.txt
src/anomaly_detector/: alert_generator.py  detector.py  health_check.py  init.py  metrics_processor.py
src/api/: init.py  main.py
src/api/core/: config.py  container.py  logging.py
src/api/routes/: __init__.py  health.py  metrics.py  predictions.py
src/utils/: alerting.py  kubernetes_client.py  prometheus_client.py
tests/: conftest.py
tests/integration/: test_deployment.py  test_kubernetes.py  test_prometheus.py
tests/performance/: load_test.py  stress_test.py
tests/unit/: test_anomaly_detector.py  test_api.py  test_feature_engineering.py
(+5 files in other folders)
